force-app/main/default/objects/slackv2__Setup_Data__c/slackv2__Setup_Data__c.object-meta.xml
<CustomObject>
    <label>Setup Data</label>
    <nameField>
        <label>Setup Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setup Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>