force-app/main/default/objects/slackv2__Setup_Data__c/fields/slackv2__Job_Frequency__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Job_Frequency__c</fullName>
    <label>Job Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>