force-app/main/default/objects/slackv2__Setup_Data__c/fields/slackv2__Optional_Steps_Completed__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Optional_Steps_Completed__c</fullName>
    <label>Optional Steps Completed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>