force-app/main/default/objects/slackv2__Setup_Data__c/fields/slackv2__SFDC_Auth_Step_Completed__c.field-meta.xml
<CustomField>
    <fullName>slackv2__SFDC_Auth_Step_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFDC Auth Step Completed</label>
    <type>Checkbox</type>
</CustomField>